# bifunctors

./: .gitignore  .hlint.yaml  .travis.yml  CHANGELOG.markdown  Data-Biapplicative.html  Data-Bifoldable.html  Data-Bifunctor-Apply.html  Data-Bifunctor-Biff.html  Data-Bifunctor-Clown.html  Data-Bifunctor-Fix.html  Data-Bifunctor-Flip.html  Data-Bifunctor-Join.html  Data-Bifunctor-Joker.html  Data-Bifunctor-Product.html  Data-Bifunctor-TH.html  Data-Bifunctor-Tannen.html  Data-Bifunctor-Wrapped.html  Data-Bifunctor.html  Data-Bitraversable.html  Data-Semigroup-Bifoldable.html  Data-Semigroup-Bitraversable.html  LICENSE  README.markdown  bifunctors.cabal  bifunctors.haddock  cabal.haskell-ci  cabal.project  doc-index.html  index-frames.html  index.html  mini_Data-Biapplicative.html  mini_Data-Bifunctor-Apply.html  mini_Data-Bitraversable.html
.github/workflows/: haskell-ci.yml
.reuse/: dep5
Data/: Bifoldable.hs  Bitraversable.hs
Data/Bifunctor/: Apply.hs
Data/Semigroup/: Bifoldable.hs
LICENSES/: BSD-2-Clause.txt
old-src/Data/: Bifunctor.hs
old-src/ghc709/Data/: Bifunctor.hs
old-src/ghc801/Data/: Bifoldable.hs  Bitraversable.hs
old-src/ghc812/Data/: Semibifoldable.hs
src/: Data-Biapplicative.html  Data-Bifoldable.html  Data-Bifunctor-Apply.html  Data-Bifunctor-Biff.html  Data-Bifunctor-Clown.html  Data-Bifunctor-Fix.html  Data-Bifunctor-Flip.html  Data-Bifunctor-Join.html  Data-Bifunctor-Joker.html  Data-Bifunctor-Product.html  Data-Bifunctor-TH-Internal.html  Data-Bifunctor-TH.html  Data-Bifunctor-Tannen.html  Data-Bifunctor-Wrapped.html  Data-Bifunctor.html  Data-Bitraversable.html  Data-Semigroup-Bifoldable.html  Data-Semigroup-Bitraversable.html  Paths_bifunctors.html
src/Data/: Biapplicative.hs  Bifoldable.hs  Bifunctor.hs  Bitraversable.hs
src/Data/Biapplicative/: Backwards.hs
src/Data/Bifunctor/: Apply.hs  Biap.hs  Biff.hs  Classes.hs  Clown.hs  Day.hs  Fix.hs  Flip.hs  Functor.hs  Join.hs  Joker.hs  Lazier.hs  Monoid.hs  Product.hs  Reverse.hs  ShowRead.hs  Stricter.hs  Sum.hs  TH.hs  Tannen.hs  Uncurry.hs  Unsafe.hs  Wrapped.hs  Yoneda.hs
src/Data/Bifunctor/Functor/: Fix.hs
src/Data/Bifunctor/TH/: Internal.hs
src/Data/Semigroup/: Bifoldable.hs  Bitraversable.hs
src/Data/Traversable/: Unzip.hs
tests/: BifunctorSpec.hs  Spec.hs  T124Spec.hs  T89Spec.hs
