cabal-version: 2.4
name:          bifunctors
category:      Data, Functors
version:       6
license:       BSD-3-Clause
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/bifunctors/
bug-reports:   http://github.com/ekmett/bifunctors/issues
copyright:     Copyright (C) 2008-2016 Edward A. Kmett
synopsis:      Bifunctors
description:   Bifunctors.
build-type:    Simple
tested-with:   GHC == 8.6.5
             , GHC == 8.8.3
             , GHC == 8.10.1
extra-source-files:
  CHANGELOG.markdown
  README.markdown

source-repository head
  type: git
  location: https://github.com/ekmett/bifunctors.git

flag semigroups
  default: True
  manual: True
  description:
    You can disable the use of the `semigroups` package using `-f-semigroups`.
    .
    Disabing this is an unsupported configuration, but it may be useful for accelerating builds in sandboxes for expert users.

flag tagged
  default: True
  manual: True
  description:
    You can disable the use of the `tagged` package using `-f-tagged`.
    .
    Disabing this is an unsupported configuration, but it may be useful for accelerating builds in sandboxes for expert users.

library
  hs-source-dirs: src
  build-depends:
    , base             >= 4.12   && < 5
    , base-orphans     >= 0.8.4 && < 1
    , comonad          ^>= 6
    , containers       ^>= 0.6.0.1
    , template-haskell
    , th-abstraction   ^>= 0.4.2.0
    , transformers     ^>= 0.5

  if flag(tagged)
    build-depends: tagged >= 0.8.6 && < 1

  if flag(semigroups) && !impl(ghc >= 8.0)
    build-depends: semigroups >= 0.18.5 && < 1

  exposed-modules:
    Data.Biapplicative
    Data.Bifunctor.Biap
    Data.Bifunctor.Biff
    Data.Bifunctor.Clown
    Data.Bifunctor.Fix
    Data.Bifunctor.Flip
    Data.Bifunctor.Functor
    Data.Bifunctor.Join
    Data.Bifunctor.Joker
    Data.Bifunctor.Product
    Data.Bifunctor.Sum
    Data.Bifunctor.Tannen
    Data.Bifunctor.TH
    Data.Bifunctor.Wrapped

  other-modules:
    Data.Bifunctor.TH.Internal
    Paths_bifunctors

  ghc-options: -Wall
  default-language: Haskell2010

  if impl(ghc >= 9.0)
    -- these flags may abort compilation with GHC-8.10
    -- https://gitlab.haskell.org/ghc/ghc/-/merge_requests/3295
    ghc-options: -Winferred-safe-imports -Wmissing-safe-haskell-mode

test-suite bifunctors-spec
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Spec.hs
  other-modules: BifunctorSpec T89Spec
  ghc-options: -Wall -Wno-star-is-type
  default-language: Haskell2010
  build-tool-depends: hspec-discover:hspec-discover >= 1.8
  build-depends:
    base,
    bifunctors,
    hspec >= 1.8,
    QuickCheck >= 2 && < 3,
    template-haskell,
    transformers

